# fixed navigation spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -2951,6 +2951,7 @@ div,
 span,
 .best-value p,
 .announcement-msg,
+.mobile-dropdown-toggle,
 p {
     letter-spacing: normal;
     color: #1D2E42;
